# tls2dseg

./: .gitignore  main.py  pyproject.toml
resources/: NiMe_image_gen.py
src/tls2dseg/: __init__.py  _version.py  bboxes_iou.py  detections_3d.py  graph_clustering.py  grounded_sam2.py  parameters_check.py  pc2img_utils.py  pc_preprocessing.py  sam_everything.py  sparse_masks_inference_slicer.py  supervision_utils.py  utils.py  utils_main.py  visualization.py
src/tls2dseg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
